[gd_scene load_steps=12 format=2]

[ext_resource path="res://Fonts/Montserrat-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/Miner.png" type="Texture" id=2]
[ext_resource path="res://Assets/GoldPot.png" type="Texture" id=3]
[ext_resource path="res://Scripts/TitleScreen.gd" type="Script" id=4]
[ext_resource path="res://Fonts/Montserrat-Bold.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Fonts/Montserrat-BoldItalic.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
size = 47
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 32
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=5]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="MarginContainer" parent="."]
margin_left = 256.0
margin_top = 32.0
margin_right = 768.0
margin_bottom = 280.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Title"]
margin_right = 512.0
margin_bottom = 248.0

[node name="Label" type="Label" parent="Title/VBoxContainer"]
margin_right = 512.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 1 )
text = "MCO1 - Gold Miner"
align = 1
uppercase = true

[node name="Label2" type="Label" parent="Title/VBoxContainer"]
margin_top = 62.0
margin_right = 512.0
margin_bottom = 231.0
custom_fonts/font = SubResource( 2 )
text = "MCO Group 33
Abalos, Alyanna
Cruz, Renz
Joyo, John"
align = 1

[node name="Selection" type="VBoxContainer" parent="."]
margin_left = 432.0
margin_top = 336.0
margin_right = 604.0
margin_bottom = 532.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="Selection"]
margin_top = 2.0
margin_right = 172.0
margin_bottom = 22.0
text = "Start"

[node name="Label" type="Label" parent="Selection"]
margin_top = 26.0
margin_right = 172.0
margin_bottom = 71.0
custom_fonts/font = SubResource( 3 )
text = "
Select AI Rationality"

[node name="VBoxContainer" type="VBoxContainer" parent="Selection"]
margin_top = 75.0
margin_right = 172.0
margin_bottom = 119.0
alignment = 1

[node name="AIBtn1" type="Button" parent="Selection/VBoxContainer"]
margin_right = 172.0
margin_bottom = 20.0
text = "Random Miner"

[node name="AIBtn2" type="Button" parent="Selection/VBoxContainer"]
margin_top = 24.0
margin_right = 172.0
margin_bottom = 44.0
text = "Smart Miner"

[node name="Label2" type="Label" parent="Selection"]
margin_top = 123.0
margin_right = 172.0
margin_bottom = 168.0
custom_fonts/font = SubResource( 4 )
text = "
Select Board Size"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Selection"]
margin_top = 172.0
margin_right = 172.0
margin_bottom = 193.0
alignment = 1

[node name="BoardBtn1" type="Button" parent="Selection/HBoxContainer"]
margin_left = 48.0
margin_right = 65.0
margin_bottom = 21.0
text = "-"

[node name="BoardSize" type="Label" parent="Selection/HBoxContainer"]
margin_left = 69.0
margin_right = 100.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 5 )
text = "  8  "

[node name="BoardBtn2" type="Button" parent="Selection/HBoxContainer"]
margin_left = 104.0
margin_right = 124.0
margin_bottom = 21.0
text = "+"

[node name="GoldPot" type="Sprite" parent="."]
position = Vector2( 784, 208 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Miner" type="Sprite" parent="."]
position = Vector2( 232, 208 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[connection signal="button_down" from="Selection/Start" to="." method="_on_Start_button_down"]
[connection signal="button_down" from="Selection/VBoxContainer/AIBtn1" to="." method="_on_AIBtn1_button_down"]
[connection signal="button_down" from="Selection/VBoxContainer/AIBtn2" to="." method="_on_AIBtn2_button_down"]
[connection signal="button_down" from="Selection/HBoxContainer/BoardBtn1" to="." method="_on_BoardBtn1_button_down"]
[connection signal="button_down" from="Selection/HBoxContainer/BoardBtn2" to="." method="_on_BoardBtn2_button_down"]
